trying to fix travis

--- a/docker/uwsgi.ini
+++ b/docker/uwsgi.ini
@@ -8,6 +8,6 @@ gid = nginx
 socket = /tmp/uwsgi.sock
 chown-socket = nginx:nginx
 chmod-socket = 664
-
+env = HOME=/home/nginx
 cheaper = 1
 processes = %(%k + 1)
