--- a/.travis.yml
+++ b/.travis.yml
@@ -1,25 +1,27 @@
 language: python
 python:
-  - "2.7"
-  - "3.5"
-  - "3.5-dev" # 3.5 development branch
-  - "3.6"
-  - "3.6-dev" # 3.6 development branch
+- '2.7'
+- '3.5'
+- 3.5-dev
+- '3.6'
+- 3.6-dev
 install:
-  - pip install -r test_requirements.txt
-  - pip install tenacity==4.4.0 dill
-  - pip install git+https://github.com/seung-lab/DynamicAnnotationDB.git#egg=dynamicannotationdb
-  - pip install -r requirements.txt
-  - gcloud version || true
-  - if [ ! -d "$HOME/google-cloud-sdk/bin" ]; then rm -rf $HOME/google-cloud-sdk; export CLOUDSDK_CORE_DISABLE_PROMPTS=1; curl https://sdk.cloud.google.com | bash; fi
-  # Add gcloud to $PATH
-  - source /home/travis/google-cloud-sdk/path.bash.inc
-  - gcloud version
-  - gcloud components update
-  - gcloud components install beta
+- pip install -r test_requirements.txt
+- pip install tenacity==4.4.0 dill
+- pip install git+https://github.com/seung-lab/DynamicAnnotationDB.git#egg=dynamicannotationdb
+- pip install -r requirements.txt
+- gcloud version || true
+- if [ ! -d "$HOME/google-cloud-sdk/bin" ]; then rm -rf $HOME/google-cloud-sdk; export
+  CLOUDSDK_CORE_DISABLE_PROMPTS=1; curl https://sdk.cloud.google.com | bash; fi
+- source /home/travis/google-cloud-sdk/path.bash.inc
+- gcloud version
+- gcloud components update
+- gcloud components install beta
 before_script:
-  - gcloud beta emulators bigtable start &
+- gcloud beta emulators bigtable start &
 script:
-  - export BIGTABLE_EMULATOR_HOST=localhost:8086
-  - python setup.py pytest
-  
+- export BIGTABLE_EMULATOR_HOST=localhost:8086
+- python setup.py pytest
+before_install:
+- openssl aes-256-cbc -K $encrypted_0a39e3a5552a_key -iv $encrypted_0a39e3a5552a_iv
+  -in credentials.tar.gz.enc -out credentials.tar.gz -d
