--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,9 @@ python:
 - 3.5-dev
 - '3.6'
 - 3.6-dev
+before_install:
+- openssl aes-256-cbc -K $encrypted_0a39e3a5552a_key -iv $encrypted_0a39e3a5552a_iv
+  -in credentials.tar.gz.enc -out credentials.tar.gz -d
 install:
 - pip install -r test_requirements.txt
 - pip install tenacity==4.4.0 dill
@@ -17,11 +20,11 @@ install:
 - gcloud version
 - gcloud components update
 - gcloud components install beta
+- tar -xzf credentials.tar.gz
+- gcloud auth activate-service-account --key-file client-secret.json
 before_script:
 - gcloud beta emulators bigtable start &
 script:
 - export BIGTABLE_EMULATOR_HOST=localhost:8086
 - python setup.py pytest
-before_install:
-- openssl aes-256-cbc -K $encrypted_0a39e3a5552a_key -iv $encrypted_0a39e3a5552a_iv
-  -in credentials.tar.gz.enc -out credentials.tar.gz -d
+
