--- a/.travis.yml
+++ b/.travis.yml
@@ -1,33 +1,35 @@
 language: python
 python:
-- '2.7'
-- '3.5'
-- 3.5-dev
-- '3.6'
-- 3.6-dev
+  - '2.7'
+  - '3.5'
+  - 3.5-dev
+  - '3.6'
+  - 3.6-dev
 before_install:
-- openssl aes-256-cbc -K $encrypted_0a39e3a5552a_key -iv $encrypted_0a39e3a5552a_iv
-  -in credentials.tar.gz.enc -out credentials.tar.gz -d
+  - openssl aes-256-cbc -K $encrypted_0a39e3a5552a_key -iv $encrypted_0a39e3a5552a_iv
+    -in credentials.tar.gz.enc -out credentials.tar.gz -d
 install:
-- pip install -r test_requirements.txt
-- pip install tenacity==4.4.0 dill
-- pip install git+https://github.com/seung-lab/DynamicAnnotationDB.git#egg=dynamicannotationdb
-- pip install -r requirements.txt
-- gcloud version || true
-- if [ ! -d "$HOME/google-cloud-sdk/bin" ]; then rm -rf $HOME/google-cloud-sdk; export
-  CLOUDSDK_CORE_DISABLE_PROMPTS=1; curl https://sdk.cloud.google.com | bash; fi
-- source /home/travis/google-cloud-sdk/path.bash.inc
-- gcloud version
-- gcloud components update
-- gcloud components install beta
-- tar -xzf credentials.tar.gz
-- mkdir -p .cloudvolume/secrets
-- cp client-secret.json .cloudvolume/secrets/google-secret.json
-- gcloud auth activate-service-account --key-file client-secret.json
+  - pip install -r test_requirements.txt
+  - pip install tenacity==4.4.0 dill
+  - pip install git+https://github.com/seung-lab/DynamicAnnotationDB.git#egg=dynamicannotationdb
+  - pip install -r requirements.txt
+  - gcloud version || true
+  - if [ ! -d "$HOME/google-cloud-sdk/bin" ]; then rm -rf $HOME/google-cloud-sdk; export
+    CLOUDSDK_CORE_DISABLE_PROMPTS=1; curl https://sdk.cloud.google.com | bash; fi
+  - source /home/travis/google-cloud-sdk/path.bash.inc
+  - gcloud --quiet version
+  - gcloud --quiet components update
+  - gcloud --quiet components install beta
+  - tar -xzf credentials.tar.gz
+  - mkdir -p .cloudvolume/secrets
+  - cp client-secret.json .cloudvolume/secrets/google-secret.json
+  - gcloud auth activate-service-account --key-file client-secret.json
 before_script:
-- gcloud beta emulators bigtable start &
+  - gcloud beta emulators bigtable start &
 script:
-- export BIGTABLE_EMULATOR_HOST=localhost:8086
-- export 
-- python setup.py pytest
-
+  - export BIGTABLE_EMULATOR_HOST=localhost:8086
+  - python setup.py pytest
+cache:
+  - pip: true
+  directories:
+  - $HOME/google-cloud-sdk/
