--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,8 @@
 language: python
 matrix:
-  include:
-        - python: 3.6
-          dist: trusty
-          sudo: false
-        - python: 3.7
-          dist: xenial
-          sudo: true
-        - python: pypy3
-          dist: trusty
-          sudo: false
+  python:
+    - 3.6
+    - 3.6-dev
 before_install:
 - openssl aes-256-cbc -K $encrypted_0a39e3a5552a_key -iv $encrypted_0a39e3a5552a_iv
   -in credentials.tar.gz.enc -out credentials.tar.gz -d
