--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ install:
 - pip install -r test_requirements.txt
 - pip install tenacity==4.4.0 dill
 - pip install git+https://github.com/fcollman/DynamicAnnotationDB.git#egg=dynamicannotationdb
-- pip install git+https://github.com/seung-lab/PyChunkedGraph.git#egg=pychunkgraph
+- pip install git+https://github.com/seung-lab/PyChunkedGraph.git
 - pip install -r requirements.txt
 - gcloud version || true
 - if [ ! -d "$HOME/google-cloud-sdk/bin" ]; then rm -rf $HOME/google-cloud-sdk; export
