--- a/.travis.yml
+++ b/.travis.yml
@@ -24,10 +24,13 @@ script:
 cache:
 - pip: true
   directories:
-  - $HOME/google-cloud-sdk/
+  - "$HOME/google-cloud-sdk/"
 after_success:
-  - codecov
+- codecov
 deploy:
   provider: gae
-  keyfile: "client-secret.json"
-  project: "neuromancer-seung-import"
+  keyfile: client-secret.json
+  project: neuromancer-seung-import
+before_install:
+- openssl aes-256-cbc -K $encrypted_7a12347eb83e_key -iv $encrypted_7a12347eb83e_iv
+  -in credentials.tar.gz.enc -out credentials.tar.gz -d
