--- a/app.yaml
+++ b/app.yaml
@@ -6,9 +6,10 @@
 # TODO: Enter your application id below. If you have signed up
 # using cloud.google.com/console use the "project id" for your application
 # id.
-runtime: python37
+runtime: custom
+env: flex
 api_version: 1
-entrypoint: gunicorn -b :$PORT run:app
+# entrypoint: gunicorn -b :$PORT run:app
 service: annotationengine
 
 # Handlers define how to route requests to your application.
@@ -22,8 +23,8 @@ handlers:
 # This handler tells app engine how to route requests to a WSGI application.
 # The script value is in the format <path.to.module>.<wsgi_application>
 # where <wsgi_application> is a WSGI application object.
-- url: .*  # This regex directs all routes to main.app
-  script: run.app
+#- url: .*  # This regex directs all routes to main.app
+#  script: run.app
 
 # Third party libraries that are included in the App Engine SDK must be listed
 # here if you want to use them.  See
