--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,6 @@ marshmallow_jsonschema
 pandas
 gunicorn==19.3.0
 cloud-volume
-git+git://github.com/seung-lab/DynamicAnnotationDB.git#egg=dynamicannotationdb
-git+git://github.com/seung-lab/emannotationschemas.git#egg=emannotationschemas
-git+git://github.com/seung-lab/pychunkedgraph.git@svenmd-mst#egg=pychunkedgraph
+dynamicannotationdb
+emannotationschemas
+pychunkedgraph
