--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,6 +1,11 @@
 steps:
+# - name: 'gcr.io/cloud-builders/docker'
+#   args: [ 'build', '-t', 'gcr.io/$PROJECT_ID/annotationengine', '.' ]
 - name: 'gcr.io/cloud-builders/docker'
-  args: [ 'build', '-t', 'gcr.io/$PROJECT_ID/annotationengine', '.' ]
-  branches: ['master'] 
+  entrypoint: 'bash'
+  args:
+  - '-c'
+  - |
+    [[ "$BRANCH_NAME" == "master" ]] && docker build -t gcr.io/$PROJECT_ID/annotationengine .
 images:
 - 'gcr.io/$PROJECT_ID/annotationengine'
