change uwsgi to run as root

--- a/docker/uwsgi.ini
+++ b/docker/uwsgi.ini
@@ -2,12 +2,12 @@
 module = run
 callable = app
 
-uid = nginx
-gid = nginx
+uid = root
+gid = root
 
 socket = /tmp/uwsgi.sock
-chown-socket = nginx:nginx
+chown-socket = root:root
 chmod-socket = 664
-env = HOME=/home/nginx
+env = HOME=/root
 cheaper = 1
 processes = %(%k + 1)
