--- a/docker/uwsgi.ini
+++ b/docker/uwsgi.ini
@@ -2,12 +2,12 @@
 module = run
 callable = app
 
-uid = root
-gid = root
+uid = nginx
+gid = nginx
 
 socket = /tmp/uwsgi.sock
-chown-socket = root:root
+chown-socket = nginx:nginx
 chmod-socket = 664
-env = HOME=/root
+env = HOME=/home/nginx
 cheaper = 1
 processes = %(%k + 1)
