--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -6,6 +6,6 @@ steps:
   args:
   - '-c'
   - |
-    [[ "$BRANCH_NAME" == "master" ]] && docker build -t gcr.io/$PROJECT_ID/annotationengine .
+    [[ "$BRANCH_NAME" == "master" ]] && docker build -t gcr.io/$PROJECT_ID/annotationengine:v0.0.1 .
 images:
-- 'gcr.io/$PROJECT_ID/annotationengine'
+- 'gcr.io/$PROJECT_ID/annotationengine:v0.0.1'
