--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ install:
 - pip install -r test_requirements.txt
 - pip install tenacity==4.4.0 dill
 - pip install git+https://github.com/seung-lab/DynamicAnnotationDB.git#egg=dynamicannotationdb
+- pip install git+https://github.com/seung-lab/EMAnnotationSchemas.git#egg=emannotationschemas
 - pip install -r requirements.txt
 - gcloud version || true
 - if [ ! -d "$HOME/google-cloud-sdk/bin" ]; then rm -rf $HOME/google-cloud-sdk; export
