--- a/.travis.yml
+++ b/.travis.yml
@@ -23,3 +23,9 @@ cache:
   - "$HOME/google-cloud-sdk/"
 after_success:
 - codecov
+- "git clone https://gist.github.com/2c04596a45ccac57fe8dde0718ad58ee.git /tmp/travis_automerge"
+- "chmod a+x /tmp/travis-automerge/auto_merge_travis_with_bumpversion.sh"
+- "BRANCHES_TO_MERGE_REGEX='develop' BRANCH_TO_MERGE_INTO=master /tmp/travis-automerge/auto_merge_travis_with_bumpversion.sh"
+- "git clone https://gist.github.com/cf9b261f26a1bf3fae6b59e7047f007a.git /tmp/travis-autodist"
+- "chmod a+x /tmp/travis-autodist/pypi_dist.sh"
+- "BRANCHES_TO_DIST='master' /tmp/travis-autodist/pypi_dist.sh"
