--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,11 +1,18 @@
 steps:
 # - name: 'gcr.io/cloud-builders/docker'
-#   args: [ 'build', '-t', 'gcr.io/$PROJECT_ID/annotationengine', '.' ]
+#   args: [ 'build', '-t', 'gcr.io/$PROJECT_ID/pychunkedgraph', '.' ]
 - name: 'gcr.io/cloud-builders/docker'
   entrypoint: 'bash'
   args:
   - '-c'
   - |
-    [[ "$BRANCH_NAME" == "master" ]] && docker build -t gcr.io/$PROJECT_ID/annotationengine:v0.0.2 .
+    docker build -t gcr.io/$PROJECT_ID/annotationengine:$TAG_NAME .
+  timeout: 600s
+#- name: 'gcr.io/cloud-builders/docker'
+#  entrypoint: 'bash'
+#  args:
+#  - '-c'
+#  - |
+#    [[ "$BRANCH_NAME" == "master" ]] && docker build -t gcr.io/$PROJECT_ID/pychunkedgraph .
 images:
-- 'gcr.io/$PROJECT_ID/annotationengine:v0.0.2'
+- 'gcr.io/$PROJECT_ID/annotationengine:$TAG_NAME'
