adding strict google reqs

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,4 +8,5 @@ cloud-volume
 dynamicannotationdb>=0.0.5
 emannotationschemas>=0.2.15
 multiwrapper
-google-auth
+google-api-core==0.1.4
+google-auth==1.5.0
