fixing google sdk caching

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ script:
 cache:
   - pip: true
     directories:
-  - "$HOME/google-cloud-sdk/"
+    - "${HOME}/google-cloud-sdk/"
 
 jobs:
   include:
