--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,10 @@ script:
   - if [ ! -d "${HOME}/google-cloud-sdk/bin" ]; then rm -rf ${HOME}/google-cloud-sdk; export CLOUDSDK_CORE_DISABLE_PROMPTS=1; curl https://sdk.cloud.google.com | bash; fi
   # Add gcloud to $PATH
   - source ${HOME}/google-cloud-sdk/path.bash.inc
-  - gcloud version
+  - gcloud --quiet version
+  - gcloud --quiet version,
+  - gcloud --quiet components update,
+  - gcloud --quiet components install beta,
   - python setup.py pytest
 
 cache:
