attempt to add longer timeouts to nginx and uwsgi

--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -19,4 +19,9 @@ listen = 1024
 max-requests = 20480
 reload-on-rss = 128
 buffer-size = 32768g
-harakiri = 360
+harakiri = 600
+http-timeout = 600
+socket-timeout = 600
+worker-reload-mercy = 600
+reload-mercy = 600
+mule-reload-mercy = 600
