--- a/timeout.conf
+++ b/timeout.conf
@@ -1,4 +1,4 @@
-proxy_connect_timeout       600;
-proxy_send_timeout          600;
-proxy_read_timeout          600;
-send_timeout                600;
+proxy_connect_timeout       600s;
+proxy_send_timeout          600s;
+proxy_read_timeout          600s;
+send_timeout                600s;
