--- a/timeout.conf
+++ b/timeout.conf
@@ -2,3 +2,4 @@ proxy_connect_timeout       600s;
 proxy_send_timeout          600s;
 proxy_read_timeout          600s;
 send_timeout                600s;
+uwsgi_read_timeout          600s;
