more qip to integrate schemas microservice

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,9 @@
 numpy
 marshmallow
 Flask
-marshmallow-jsonschema
-marshmallow_jsonschema
 pandas
 cloud-volume
-dynamicannotationdb>=0.0.5<1.0.0
+dynamicannotationdb>=1.0.0
 emannotationschemas>=0.2.15
 multiwrapper
 google-api-core==0.1.4
