--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,8 @@
 numpy
-marshmallow
 Flask
 pandas
 cloud-volume
 dynamicannotationdb>=1.0.0
 emannotationschemas>=0.2.15
 multiwrapper
-google-api-core==0.1.4
-google-auth==1.5.0
+jsonschema
