--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ git+https://github.com/seung-lab/DynamicAnnotationDB.git@postgres_v1#egg=dynamic
 git+https://github.com/seung-lab/EMAnnotationSchemas.git@marshmallow_3.5.1#egg=emannotationschemas
 multiwrapper
 jsonschema
+marshmallow
 flask_sqlalchemy
 flask-marshmallow
 flask-admin
