tuned uwsgi params

--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -7,16 +7,22 @@ hook-master-start = unix_signal:15 gracefully_kill_them_all
 
 module = run
 callable = application
+need-app = true
 
 uid = nginx
 gid = nginx
 
+master = true
+vacuum = true
+auto-procname = true
 env = HOME=/home/nginx
 cheaper = 1
 processes = %(%k + 1)
-enable_threads = true
-listen = 1024
-max-requests = 20480
+enable-threads = true
+die-on-term = true
+listen = 128
+max-requests = 2048
+max-worker-lifetime = 3600
 reload-on-rss = 128
 buffer-size = 32768g
 harakiri = 600
