--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -4,6 +4,5 @@ commit = True
 tag = True
 
 [bumpversion:file:annotationengine/__init__.py]
-
-[bumpversion:file:annotationengine/annotation.py]
-
+[bumpversion:file:annotationengine/api.py]
+[bumpversion:file:annotationengine/views.py]
