--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 Flask
--e git+https://github.com/seung-lab/DynamicAnnotationDB.git@v2.1api#egg=dynamicannotationdb
--e git+https://github.com/seung-lab/EMAnnotationSchemas.git@v2.1api#egg=emannotationschemas
+-e git+https://github.com/seung-lab/DynamicAnnotationDB.git@mat_refactor#egg=dynamicannotationdb
+-e git+https://github.com/seung-lab/EMAnnotationSchemas.git@mat_refactor#egg=emannotationschemas
 -e git+https://github.com/seung-lab/AnnotationFrameworkClient.git@authclient_fcc#egg=annotationframeworkclient
 multiwrapper
 jsonschema
