--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-Flask
+Flask<2.0
 -e git+git://github.com/seung-lab/DynamicAnnotationDB.git@voxel_resolution#egg=dynamicannotationdb
 emannotationschemas>=3.1.1
 annotationframeworkclient>=2.5.0
