--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ emannotationschemas>=3.1.1
 annotationframeworkclient>=2.5.0
 multiwrapper
 jsonschema
-middle-auth-client==3.4.1
+middle-auth-client>=3.5.0
 flask_sqlalchemy
 flask_cors
 flask-marshmallow==0.14.0
