--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 Flask<2.0
 dynamicannotationdb>=3.0.0
 emannotationschemas>=3.2.2
-annotationframeworkclient>=2.5.0
+caveclient>=4.0.0
 multiwrapper
 jsonschema
 middle-auth-client==3.2.5
