--- a/requirements.in
+++ b/requirements.in
@@ -1,9 +1,9 @@
 Flask<2.0
-dynamicannotationdb>=3.1.2
-emannotationschemas>=3.5.1
+dynamicannotationdb>=3.1.4
+emannotationschemas>=3.5.2
 caveclient>=4.0.0
 multiwrapper
-jsonschema
+jsonschema<4.0
 middle-auth-client>=3.8.1
 flask_sqlalchemy
 flask_cors
