--- a/requirements.txt
+++ b/requirements.txt
@@ -9,10 +9,12 @@ alembic==1.7.5
 aniso8601==9.0.1
     # via
     #   dynamicannotationdb
+    #   emannotationschemas
     #   flask-restx
 attrs==21.2.0
     # via
     #   dynamicannotationdb
+    #   emannotationschemas
     #   jsonschema
 backcall==0.2.0
     # via ipython
@@ -21,30 +23,35 @@ cachetools==4.2.4
     #   -r requirements.in
     #   caveclient
     #   dynamicannotationdb
+    #   emannotationschemas
     #   middle-auth-client
 caveclient==4.4.1
     # via -r requirements.in
 certifi==2021.10.8
     # via
     #   dynamicannotationdb
+    #   emannotationschemas
     #   requests
 charset-normalizer==2.0.7
     # via
     #   dynamicannotationdb
+    #   emannotationschemas
     #   requests
 click==7.1.2
     # via
     #   dynamicannotationdb
+    #   emannotationschemas
     #   flask
 decorator==5.0.9
     # via ipython
 deprecated==1.2.13
     # via
     #   dynamicannotationdb
+    #   emannotationschemas
     #   redis
-dynamicannotationdb==3.1.2
+dynamicannotationdb==3.1.4
     # via -r requirements.in
-emannotationschemas==3.5.1
+emannotationschemas==3.5.2
     # via
     #   -r requirements.in
     #   dynamicannotationdb
@@ -87,6 +94,7 @@ flask-sqlalchemy==2.5.1
 furl==2.1.3
     # via
     #   dynamicannotationdb
+    #   emannotationschemas
     #   middle-auth-client
 geoalchemy2==0.9.4
     # via
@@ -95,17 +103,18 @@ geoalchemy2==0.9.4
 idna==3.3
     # via
     #   dynamicannotationdb
+    #   emannotationschemas
     #   requests
 importlib-metadata==4.8.2
     # via
     #   alembic
     #   dynamicannotationdb
+    #   emannotationschemas
     #   jsonschema
 importlib-resources==5.4.0
     # via
     #   alembic
     #   dynamicannotationdb
-    #   jsonschema
 ipython==7.26.0
     # via caveclient
 ipython-genutils==0.2.0
@@ -113,17 +122,20 @@ ipython-genutils==0.2.0
 itsdangerous==1.1.0
     # via
     #   dynamicannotationdb
+    #   emannotationschemas
     #   flask
 jedi==0.18.0
     # via ipython
 jinja2==2.11.3
     # via
     #   dynamicannotationdb
+    #   emannotationschemas
     #   flask
-jsonschema==4.2.1
+jsonschema==3.2.0
     # via
     #   -r requirements.in
     #   dynamicannotationdb
+    #   emannotationschemas
     #   flask-restx
 mako==1.1.5
     # via
@@ -132,6 +144,7 @@ mako==1.1.5
 markupsafe==2.0.1
     # via
     #   dynamicannotationdb
+    #   emannotationschemas
     #   jinja2
     #   mako
     #   wtforms
@@ -171,10 +184,12 @@ numpy==1.21.4
 orderedmultidict==1.0.1
     # via
     #   dynamicannotationdb
+    #   emannotationschemas
     #   furl
 packaging==21.2
     # via
     #   dynamicannotationdb
+    #   emannotationschemas
     #   geoalchemy2
 pandas==1.3.4
     # via
@@ -202,10 +217,12 @@ pygments==2.10.0
 pyparsing==2.4.7
     # via
     #   dynamicannotationdb
+    #   emannotationschemas
     #   packaging
 pyrsistent==0.18.0
     # via
     #   dynamicannotationdb
+    #   emannotationschemas
     #   jsonschema
 python-dateutil==2.8.1
     # via
@@ -221,12 +238,14 @@ pytz==2020.1
 redis==4.0.0
     # via
     #   dynamicannotationdb
+    #   emannotationschemas
     #   middle-auth-client
 requests==2.26.0
     # via
     #   -r requirements.in
     #   caveclient
     #   dynamicannotationdb
+    #   emannotationschemas
     #   middle-auth-client
 shapely==1.8.0
     # via
@@ -235,10 +254,12 @@ shapely==1.8.0
 six==1.16.0
     # via
     #   dynamicannotationdb
+    #   emannotationschemas
     #   flask-cors
     #   flask-marshmallow
     #   flask-restx
     #   furl
+    #   jsonschema
     #   orderedmultidict
     #   python-dateutil
 sqlalchemy==1.3.24
@@ -256,16 +277,19 @@ traitlets==5.0.5
 typing-extensions==4.0.0
     # via
     #   dynamicannotationdb
+    #   emannotationschemas
     #   importlib-metadata
 urllib3==1.26.7
     # via
     #   dynamicannotationdb
+    #   emannotationschemas
     #   requests
 wcwidth==0.2.5
     # via prompt-toolkit
 werkzeug==1.0.1
     # via
     #   dynamicannotationdb
+    #   emannotationschemas
     #   flask
     #   flask-accepts
     #   flask-restx
@@ -273,13 +297,16 @@ wrapt==1.13.3
     # via
     #   deprecated
     #   dynamicannotationdb
+    #   emannotationschemas
 wtforms==3.0.0
     # via
     #   dynamicannotationdb
+    #   emannotationschemas
     #   flask-admin
 zipp==3.6.0
     # via
     #   dynamicannotationdb
+    #   emannotationschemas
     #   importlib-metadata
     #   importlib-resources
 
