--- a/requirements.txt
+++ b/requirements.txt
@@ -7,58 +7,37 @@
 alembic==1.7.5
     # via dynamicannotationdb
 aniso8601==9.0.1
-    # via
-    #   dynamicannotationdb
-    #   emannotationschemas
-    #   flask-restx
+    # via flask-restx
 attrs==21.2.0
-    # via
-    #   dynamicannotationdb
-    #   emannotationschemas
-    #   jsonschema
+    # via jsonschema
 backcall==0.2.0
     # via ipython
 cachetools==4.2.4
     # via
     #   -r requirements.in
     #   caveclient
-    #   dynamicannotationdb
-    #   emannotationschemas
     #   middle-auth-client
 caveclient==4.4.1
     # via -r requirements.in
 certifi==2021.10.8
-    # via
-    #   dynamicannotationdb
-    #   emannotationschemas
-    #   requests
+    # via requests
 charset-normalizer==2.0.7
-    # via
-    #   dynamicannotationdb
-    #   emannotationschemas
-    #   requests
+    # via requests
 click==7.1.2
-    # via
-    #   dynamicannotationdb
-    #   emannotationschemas
-    #   flask
+    # via flask
 decorator==5.0.9
     # via ipython
 deprecated==1.2.13
-    # via
-    #   dynamicannotationdb
-    #   emannotationschemas
-    #   redis
-dynamicannotationdb==3.1.5
+    # via redis
+dynamicannotationdb==3.1.7
     # via -r requirements.in
-emannotationschemas==3.5.3
+emannotationschemas==3.5.4
     # via
     #   -r requirements.in
     #   dynamicannotationdb
 flask==1.1.4
     # via
     #   -r requirements.in
-    #   dynamicannotationdb
     #   emannotationschemas
     #   flask-admin
     #   flask-cors
@@ -69,68 +48,48 @@ flask==1.1.4
 flask-accepts==0.18.4
     # via
     #   -r requirements.in
-    #   dynamicannotationdb
     #   emannotationschemas
 flask-admin==1.5.8
     # via
     #   -r requirements.in
-    #   dynamicannotationdb
     #   emannotationschemas
-flask_cors==3.0.10
+flask-cors==3.0.10
     # via
     #   -r requirements.in
-    #   dynamicannotationdb
     #   emannotationschemas
 flask-marshmallow==0.14.0
     # via -r requirements.in
 flask-restx==0.5.1
     # via
     #   -r requirements.in
-    #   dynamicannotationdb
     #   emannotationschemas
     #   flask-accepts
 flask-sqlalchemy==2.5.1
     # via -r requirements.in
 furl==2.1.3
-    # via
-    #   dynamicannotationdb
-    #   emannotationschemas
-    #   middle-auth-client
+    # via middle-auth-client
 geoalchemy2==0.9.4
     # via
     #   dynamicannotationdb
     #   emannotationschemas
 idna==3.3
-    # via
-    #   dynamicannotationdb
-    #   emannotationschemas
-    #   requests
+    # via requests
 importlib-metadata==4.8.2
     # via
     #   alembic
-    #   dynamicannotationdb
-    #   emannotationschemas
     #   jsonschema
 importlib-resources==5.4.0
-    # via
-    #   alembic
-    #   dynamicannotationdb
+    # via alembic
 ipython==7.26.0
     # via caveclient
 ipython-genutils==0.2.0
     # via traitlets
 itsdangerous==1.1.0
-    # via
-    #   dynamicannotationdb
-    #   emannotationschemas
-    #   flask
+    # via flask
 jedi==0.18.0
     # via ipython
 jinja2==2.11.3
-    # via
-    #   dynamicannotationdb
-    #   emannotationschemas
-    #   flask
+    # via flask
 jsonschema==3.2.0
     # via
     #   -r requirements.in
@@ -138,13 +97,9 @@ jsonschema==3.2.0
     #   emannotationschemas
     #   flask-restx
 mako==1.1.5
-    # via
-    #   alembic
-    #   dynamicannotationdb
+    # via alembic
 markupsafe==2.0.1
     # via
-    #   dynamicannotationdb
-    #   emannotationschemas
     #   jinja2
     #   mako
     #   wtforms
@@ -157,9 +112,7 @@ marshmallow==3.5.1
     #   marshmallow-jsonschema
     #   marshmallow-sqlalchemy
 marshmallow-jsonschema==0.10.0
-    # via
-    #   dynamicannotationdb
-    #   emannotationschemas
+    # via emannotationschemas
 marshmallow-sqlalchemy==0.26.1
     # via -r requirements.in
 matplotlib-inline==0.1.2
@@ -167,7 +120,6 @@ matplotlib-inline==0.1.2
 middle-auth-client==3.9.0
     # via
     #   -r requirements.in
-    #   dynamicannotationdb
     #   emannotationschemas
 multiwrapper==0.1.1
     # via -r requirements.in
@@ -176,25 +128,17 @@ networkx==2.6.2
 numpy==1.21.4
     # via
     #   caveclient
-    #   dynamicannotationdb
     #   emannotationschemas
     #   multiwrapper
     #   pandas
     #   pyarrow
 orderedmultidict==1.0.1
-    # via
-    #   dynamicannotationdb
-    #   emannotationschemas
-    #   furl
+    # via furl
 packaging==21.2
-    # via
-    #   dynamicannotationdb
-    #   emannotationschemas
-    #   geoalchemy2
+    # via geoalchemy2
 pandas==1.3.4
     # via
     #   caveclient
-    #   dynamicannotationdb
     #   emannotationschemas
 parso==0.8.2
     # via jedi
@@ -215,18 +159,11 @@ pyarrow==5.0.0
 pygments==2.10.0
     # via ipython
 pyparsing==2.4.7
-    # via
-    #   dynamicannotationdb
-    #   emannotationschemas
-    #   packaging
+    # via packaging
 pyrsistent==0.18.0
-    # via
-    #   dynamicannotationdb
-    #   emannotationschemas
-    #   jsonschema
+    # via jsonschema
 python-dateutil==2.8.1
     # via
-    #   dynamicannotationdb
     #   emannotationschemas
     #   pandas
 pytz==2020.1
@@ -236,16 +173,11 @@ pytz==2020.1
     #   flask-restx
     #   pandas
 redis==4.0.0
-    # via
-    #   dynamicannotationdb
-    #   emannotationschemas
-    #   middle-auth-client
+    # via middle-auth-client
 requests==2.26.0
     # via
     #   -r requirements.in
     #   caveclient
-    #   dynamicannotationdb
-    #   emannotationschemas
     #   middle-auth-client
 shapely==1.8.0
     # via
@@ -253,8 +185,6 @@ shapely==1.8.0
     #   emannotationschemas
 six==1.16.0
     # via
-    #   dynamicannotationdb
-    #   emannotationschemas
     #   flask-cors
     #   flask-marshmallow
     #   flask-restx
@@ -275,38 +205,22 @@ traitlets==5.0.5
     #   ipython
     #   matplotlib-inline
 typing-extensions==4.0.0
-    # via
-    #   dynamicannotationdb
-    #   emannotationschemas
-    #   importlib-metadata
+    # via importlib-metadata
 urllib3==1.26.7
-    # via
-    #   dynamicannotationdb
-    #   emannotationschemas
-    #   requests
+    # via requests
 wcwidth==0.2.5
     # via prompt-toolkit
 werkzeug==1.0.1
     # via
-    #   dynamicannotationdb
-    #   emannotationschemas
     #   flask
     #   flask-accepts
     #   flask-restx
 wrapt==1.13.3
-    # via
-    #   deprecated
-    #   dynamicannotationdb
-    #   emannotationschemas
+    # via deprecated
 wtforms==3.0.0
-    # via
-    #   dynamicannotationdb
-    #   emannotationschemas
-    #   flask-admin
+    # via flask-admin
 zipp==3.6.0
     # via
-    #   dynamicannotationdb
-    #   emannotationschemas
     #   importlib-metadata
     #   importlib-resources
 
