--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,31 +1,40 @@
 version: '3'
 services:
-  app:
-    image: 'annotation:tag'
-    build:
-      context: .
-      dockerfile: dev.Dockerfile
-    ports:
-      - 8082:4001
-    volumes:
-      - .:/app
-    env_file:
-      - ./.env-docker.dev
-    command: python run.py
-  db:
-    image: mdillon/postgis
-    env_file:
-      - ./.env-docker.dev
-    ports:
-      - 5434:5432
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-      - ./entrypoint.sh:/var/lib/postgresql/entrypoint.sh
-    healthcheck:
-      test: "pg_isready -h localhost -p 5432 -q -U postgres"
-      interval: 3s
-      timeout: 5s
-  #     retries: 5
+    db:
+      image: mdillon/postgis
+      restart: always
+      env_file:
+        - ./.env-docker.dev 
+      ports:
+        - 5432:5432
+      volumes:
+        - postgres_data:/var/lib/postgresql/data
+        # - ./entrypoint.sh:/var/lib/postgresql/entrypoint.sh
+      healthcheck:
+        test: "pg_isready -h localhost -p 5432 -q -U postgres"
+        interval: 3s
+        timeout: 5s
+        retries: 5
+    adminer:
+      image: adminer
+      ports:
+        - 8080:8080
+      links:
+        - db
+    app:
+      image: 'app:tag'
+      build:
+        context: .
+        dockerfile: dev.Dockerfile
+      ports:
+        - 80:80
+      volumes:
+        - .:/app
+      env_file:
+        - ./.env-docker.dev 
+      depends_on:
+        - db
 
 volumes:
   postgres_data:
+    driver: local
