chore: update dev env file

--- a/.env-docker.dev
+++ b/.env-docker.dev
@@ -1,6 +1,7 @@
+FLASK_CONFIGURATION=development
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=annodb
-POSTGRES_DB=annodb
+POSTGRES_DB=annotation
 
 AUTH_URI=global.daf-apis.com/auth
 STICKY_AUTH_URL=global.daf-apis.com/sticky_auth
