--- a/.env.dev
+++ b/.env.dev
@@ -1,6 +1,6 @@
 export POSTGRES_USER=postgres
-export POSTGRES_PASSWORD=postgres
-export POSTGRES_DB=annodb
+export POSTGRES_PASSWORD=annodb
+export POSTGRES_DB=annotation
 
 export AUTH_URI=global.daf-apis.com/auth
 export STICKY_AUTH_URL=global.daf-apis.com/sticky_auth
