trying to fix tests

--- a/.env-docker.dev
+++ b/.env-docker.dev
@@ -2,6 +2,6 @@ FLASK_CONFIGURATION=development
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=annodb
 POSTGRES_DB=annotation
-
+AUTH_DISABLED=true
 AUTH_URI=global.daf-apis.com/auth
 STICKY_AUTH_URL=global.daf-apis.com/sticky_auth
