--- a/.github/workflows/annotationengine.yml
+++ b/.github/workflows/annotationengine.yml
@@ -61,5 +61,7 @@ jobs:
 
       - name: Test with pytest
         shell: bash -l {0}
+        env:
+          AUTH_DISABLED: true
         run: |
           pytest
