--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,39 +1,39 @@
 version: '3'
 services:
-    db:
-      image: mdillon/postgis
-      restart: always
-      env_file:
-        - ./.env-docker.dev 
-      ports:
-        - 5432:5432
-      volumes:
-        - postgres_data:/var/lib/postgresql/data
-        # - ./entrypoint.sh:/var/lib/postgresql/entrypoint.sh
-      healthcheck:
-        test: "pg_isready -h localhost -p 5432 -q -U postgres"
-        interval: 3s
-        timeout: 5s
-        retries: 5
-    adminer:
-      image: adminer
-      ports:
-        - 8080:8080
-      links:
-        - db
-    app:
-      image: 'app:tag'
-      build:
-        context: .
-        dockerfile: dev.Dockerfile
-      ports:
-        - 80:80
-      volumes:
-        - .:/app
-      env_file:
-        - ./.env-docker.dev 
-      depends_on:
-        - db
+  db:
+    image: mdillon/postgis
+    restart: always
+    env_file:
+      - ./.env-docker.dev
+    ports:
+      - 5432:5432
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+      # - ./entrypoint.sh:/var/lib/postgresql/entrypoint.sh
+    healthcheck:
+      test: "pg_isready -h localhost -p 5432 -q -U postgres"
+      interval: 3s
+      timeout: 5s
+      retries: 5
+  adminer:
+    image: adminer
+    ports:
+      - 8080:8080
+    links:
+      - db
+  app:
+    image: 'caveconnectome/annotationengine:v3.6.4'
+    build:
+      context: .
+      dockerfile: dev.Dockerfile
+    ports:
+      - 80:80
+    volumes:
+      - .:/app
+    env_file:
+      - ./.env-docker.dev
+    depends_on:
+      - db
 
 volumes:
   postgres_data:
