some test improvements

--- a/.env-docker.dev
+++ b/.env-docker.dev
@@ -1,7 +1,8 @@
 FLASK_CONFIGURATION=development
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=annodb
-POSTGRES_DB=annotation
+POSTGRES_DB=test_aligned_volume
 AUTH_DISABLED=true
 AUTH_URI=global.daf-apis.com/auth
 STICKY_AUTH_URL=global.daf-apis.com/sticky_auth
+SQLALCHEMY_DATABASE_URI=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/test_aligned_volume
