--- a/requirements.txt
+++ b/requirements.txt
@@ -116,7 +116,7 @@ marshmallow-sqlalchemy==0.27.0
     # via -r requirements.in
 matplotlib-inline==0.1.3
     # via ipython
-middle-auth-client==3.9.1
+-e git+git://github.com/seung-lab/middle_auth_client.git@auth_disabled_fix#egg=middle_auth_client
     # via
     #   -r requirements.in
     #   emannotationschemas
