--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,9 @@
 #    pip-compile
 #
 alembic==1.7.6
-    # via dynamicannotationdb
+    # via
+    #   dynamicannotationdb
+    #   flask-migrate
 aniso8601==9.0.1
     # via flask-restx
 attrs==21.4.0
@@ -42,6 +44,7 @@ flask==1.1.4
     #   flask-admin
     #   flask-cors
     #   flask-marshmallow
+    #   flask-migrate
     #   flask-restx
     #   flask-sqlalchemy
     #   middle-auth-client
@@ -59,13 +62,17 @@ flask-cors==3.0.10
     #   emannotationschemas
 flask-marshmallow==0.14.0
     # via -r requirements.in
+flask-migrate==3.1.0
+    # via -r requirements.in
 flask-restx==0.5.1
     # via
     #   -r requirements.in
     #   emannotationschemas
     #   flask-accepts
 flask-sqlalchemy==2.5.1
-    # via -r requirements.in
+    # via
+    #   -r requirements.in
+    #   flask-migrate
 furl==2.1.3
     # via middle-auth-client
 geoalchemy2==0.10.2
