--- a/requirements.txt
+++ b/requirements.txt
@@ -29,7 +29,7 @@ decorator==5.1.1
     # via ipython
 deprecated==1.2.13
     # via redis
-dynamicannotationdb==5.2.2
+dynamicannotationdb==git+https://github.com/seung-lab/dynamicannotationdb@warning_text
     # via -r requirements.in
 emannotationschemas==5.1.1
     # via
