--- a/requirements.txt
+++ b/requirements.txt
@@ -29,9 +29,9 @@ decorator==5.1.1
     # via ipython
 deprecated==1.2.13
     # via redis
-git+https://github.com/seung-lab/dynamicannotationdb@warning_text
+dynamicannotationdb==5.3.0
     # via -r requirements.in
-emannotationschemas==5.1.5
+emannotationschemas==5.2.1
     # via
     #   -r requirements.in
     #   dynamicannotationdb
