Trying to get tests to run on Github

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,7 +1,20 @@
 # pytest.ini
 [pytest]
-addopts = -W error -p no:warnings   
+env =
+    C_FORCE_ROOT=true
+    AUTH_DISABLED=true
+    AUTH_DATABASE_NAME='test_auth'
+    USE_SENTINEL=False
+    USE_LOCAL_TEST_DB=False
+    TEST_MODE='DockerTestingConfig'
+    QUEUE_LENGTH_LIMIT=100
+    QUEUES_TO_THROTTLE="celery"
+    REDIS_HOST="memory://"
+    REDIS_PORT=""
+    REDIS_PASSWORD=""
+addopts = -W error -p no:warnings
 log_cli = true
 log_cli_level = INFO
 log_cli_format = %(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)
 log_cli_date_format=%Y-%m-%d %H:%M:%S
+testpaths = "tests"
