--- a/.github/workflows/annotationengine.yml
+++ b/.github/workflows/annotationengine.yml
@@ -63,7 +63,7 @@ jobs:
       - name: Test with pytest
         shell: bash -l {0}
         env: 
-          AUTH_DISABLED: "true"
+          AUTH_DISABLED: true
         run: |
           python -c "import os; print('AUTH_DISABLED:', os.getenv('AUTH_DISABLED'), type(os.getenv('AUTH_DISABLED')))"
           pytest
