trying to upload coverage reports

--- a/.github/workflows/annotationengine.yml
+++ b/.github/workflows/annotationengine.yml
@@ -67,3 +67,7 @@ jobs:
         run: |
           python -c "import os; print('AUTH_DISABLED:', os.getenv('AUTH_DISABLED'), type(os.getenv('AUTH_DISABLED')))"
           pytest
+      - name: Upload coverage to codecov
+        uses: codecov/codecov-action@v5
+        with:
+          use_oidc: true
