--- a/.github/workflows/annotationengine.yml
+++ b/.github/workflows/annotationengine.yml
@@ -72,4 +72,4 @@ jobs:
       - name: Upload coverage to codecov
         uses: codecov/codecov-action@v5
         with:
-          token: {{ secrets.CODECOV_TOKEN }}
+          token: ${{ secrets.CODECOV_TOKEN }}
