--- a/.github/workflows/annotationengine.yml
+++ b/.github/workflows/annotationengine.yml
@@ -73,3 +73,4 @@ jobs:
         uses: codecov/codecov-action@v5
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
+          files: test-reports/test.xml
