adding triggering based on workflow change

--- a/.github/workflows/annotationengine.yml
+++ b/.github/workflows/annotationengine.yml
@@ -11,6 +11,7 @@ on:
     paths:
       - "annotationengine/**"
       - "tests/**"
+      - ".github/workflows/annotationengine.yml"
   pull_request:
     branches: [master]
 
