--- a/pytest.ini
+++ b/pytest.ini
@@ -12,7 +12,7 @@ env =
     REDIS_HOST="memory://"
     REDIS_PORT=""
     REDIS_PASSWORD=""
-addopts = -W error -p no:warnings --cov annotationengine --cov-report html --junitxml=test-reports/test.xml
+addopts = -W error -p no:warnings --cov annotationengine --cov-report xml --junitxml=test-reports/test.xml
 log_cli = true
 log_cli_level = INFO
 log_cli_format = %(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)
