--- a/.github/workflows/annotationengine.yml
+++ b/.github/workflows/annotationengine.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Set up Python 3.10
         uses: actions/setup-python@v2
         with:
-          python-version: 3.10
+          python-version: "3.10"
       - uses: actions/cache@v4
         with:
           path: ~/.cache/pip
@@ -48,7 +48,7 @@ jobs:
         with:
           auto-update-conda: true
           auto-activate-base: true
-          python-version: 3.10
+          python-version: "3.10"
       - name: Install dependencies
         shell: bash -l {0}
         run: |
